src/test/contracts/top_level_patterns/negative/jsligo/record.jsligo
// TODO: write this in jsligo

// type r = { a : nat , b : int , c : string }

// let r = { a : 1 as nat ; b : 1 ; c : "Hello" }
// let { a ; b : a ; c } = r